--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,5 @@
 title: dg.gg
+favicon: true
 description: >
   A data-driven exploration of a severe case of Dunning-Krueger based on S5 LoL experience.
 # - Most of the time the dynamic domeys say this it is about something they just don't know is standard,
